--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,10 +2,10 @@
 
 
 <div class="ui main text container segment">
-	<div class="ui huge header"> <% blog.title %> </div>
+	<div class="ui huge header"> <%= blog.title %> </div>
 	<div class="ui top attached">
 		<div class="item">
-			<img class="ui centered rounded image" src="<% blog.image %>" />
+			<img class="ui centered rounded image" src="<%= blog.image %>" />
 			<div class="content">
 				<span> <%= blog.created.toDateString() %> </span>
 			</div>
