--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,17 @@
 <html>
-	<head>
-		<title>RESTful Blog App</title>
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/app.css" />
-	</head>
 
-	<body>
-		<div class="ui fixed inverted menu">
-			<div class="container">
-				<div class="header item"><i class="pencil alternate icon"></i>Blog Site</div>
-				<a href="/" class="item">Home</a>
-				<a href="/blogs/new" class="item">New Entry</a>
-			</div>
-		</div>
+<head>
+    <title>RESTful Blog App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css" />
+</head>
+
+<body>
+    <div class="ui fixed inverted menu">
+        <div class="container">
+            <div class="header item"><i class="pencil alternate icon"></i>Blog Site</div>
+            <a href="/" class="item">Home</a>
+            <a href="/blogs/new" class="item">New Entry</a>
+        </div>
+    </div>
