--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,46 @@
 <% include ./partials/header %>
 
 
-<div class="ui main text container">
-	<div class="ui huge header">Index Page</div>
-	<div class="ui top attached segment">
-		<div class="ui divided items">
+    <div class="row">
+        <div class="container">
+            <div class="">Blogs</div>
+            <div class="">
+                <div class="">
 
-			<% blogs.forEach(function(blog) { %>
-				<div class="item">
-					<div class="image">
-						<img src="<%= blog.image %>" />
-					</div> <!-- image -->
-					<div class="content">
-						<a class="header" href="/blogs/<%= blog._id %>">
-							<%= blog.title %>
-						</a>
-						<div class="meta">
-							<span>
-								<%= blog.created.toDateString() %>
-							</span>
-						</div> <!-- meta -->
-						<div class="description">
-							<p> <%- blog.body.substring(0, 100) %>... </p>
-						</div> <!-- description -->
-						<div class="extra">
-							<a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
-								Read more
-								<i class="right chevron icon"></i>
-							</a>
-						</div> <!-- extra -->
-					</div> <!-- content -->
-				</div> <!-- item -->
-			<% }); %>
+                    <% blogs.forEach(function(blog) { %>
+                        <div class="item">
+                            <div class="image">
+                                <img src="<%= blog.image %>" />
+                            </div> <!-- image -->
+                            <div class="content">
+                                <a class="header" href="/blogs/<%= blog._id %>">
+                                    <%= blog.title %>
+                                </a>
+                                <div class="meta">
+                                    <span>
+                                        <%= blog.created.toDateString() %>
+                                    </span>
+                                </div> <!-- meta -->
+                                <div class="description">
+                                    <p>
+                                        <%- blog.body.substring(0, 100) %>...
+                                    </p>
+                                </div> <!-- description -->
+                                <div class="extra">
+                                    <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
+                                        Read more
+                                        <i class="right chevron icon"></i>
+                                    </a>
+                                </div> <!-- extra -->
+                            </div> <!-- content -->
+                        </div> <!-- item -->
+                        <% }); %>
 
-		</div> <!-- divided items -->
-	</div> <!-- top attached segment -->
-</div> <!-- main text container -->
+                </div> <!-- divided items -->
+            </div> <!-- top attached segment -->
+        </div>
+
+    </div> <!-- main text container -->
 
 
-<% include ./partials/footer %>
+    <% include ./partials/footer %>
