--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,19 +1,36 @@
 <html>
 
 <head>
-    <title>RESTful Blog App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Climate Change is Real</title>
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/f4c3f2aa37.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="ui fixed inverted menu">
+    <!-- <div class="ui fixed inverted menu">
         <div class="container">
             <div class="header item"><i class="pencil alternate icon"></i>Blog Site</div>
             <a href="/" class="item">Home</a>
             <a href="/blogs/new" class="item">New Entry</a>
         </div>
-    </div>
+    </div> -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+      <div class="container">
+        <i class="fas fa-globe-europe fs-5" style="color: white"></i>
+        
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/blogs">Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/blogs/new">Create new</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
