--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,24 +1,34 @@
 <% include ./partials/header %>
 
+    <div class="mt-5">
+        <div class="container">
 
-<div class="ui main text container segment">
-	<div class="ui huge header"> <%= blog.title %> </div>
-	<div class="ui top attached">
-		<div class="item">
-			<img class="ui centered rounded image" src="<%= blog.image %>" />
-			<div class="content">
-				<span> <%= blog.created.toDateString() %> </span>
-			</div>
-			<div class="description">
-				<p> <%- blog.body %> </p>
-			</div>
-			<a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-			<form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
-				<button class="ui red basic button">Delete</button>
-			</form>
-		</div> <!-- item -->
-	</div> <!-- top attached -->
-</div> <!-- container -->
+            <div class="mt-4">
+                <a class="header blog-page-show-a" href="/blogs/<%= blog._id %>">
+                    <div class="card" style="">
+                        <img src="<%= blog.image %>" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h1 class="card-title">
+                                <%= blog.title %>
+                            </h1>
+                            <p class="card-text">
+                                <%= blog.created.toDateString() %>
+                            </p>
+                            <p class="card-text mb-3">
+                                <%- blog.body %>
+                            </p>
+                            <a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+                            <form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
+                                <button class="ui red basic button">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div> <!-- container -->
+    </div>
 
 
-<% include ./partials/footer %>
+
+
+    <% include ./partials/footer %>
